--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
   "ignore": [],
   "repository": {
     "type": "git",
-    "url": "git://github.com/legalthings/signature-pad-angular.git"
+    "url": "https://github.com/joelkaufman/angular-signature.git"
   },
   "dependencies": {
     "angular": ">=1.3 <2.0",
